--- a/frontapp/package.json
+++ b/frontapp/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-vuetify-preset-basil": "^1.0.4",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
